@@ -1,6 +1,8 @@
 Date	Added
 	
 2005/12/22
+	* wedding_modifydisplay's default is now no (that's how it is on official)
+	  [Skotlex]
 	* Some cleaning to skill_attack, also added target checking for splash
 	  attacks/groundbased skills [Skotlex]
 	* Mobs will now stop walking if their target no longer exists (picked up
