@@ -500,7 +500,7 @@ item_check: no
 item_use_interval: 0
 
 // Will tuxedo and wedding dresses be shown when worn? (Note 1)
-wedding_modifydisplay: yes
+wedding_modifydisplay: no
 
 // The time interval for HP to restore naturally. (in milliseconds) (Note 3)
 natural_healhp_interval: 6000
