@@ -1781,7 +1781,7 @@
 7167,Strange_Piece_of_Iron,Strange Piece of Iron,3,,215,10,,,,,,,,,,,,,{}
 7168,Big_Wing_of_Butterfly,Big Wing of Butterfly,3,,307,10,,,,,,,,,,,,,{}
 7169,Tae_Guk_Tablet,Tae Guk Tablet,3,,1400,10,,,,,,,,,,,,,{}
-7170,Tuxedo,Tuxedo,5,,21500,10,,0,,0,127918078,7,1,16,,0,1,0,{}
+7170,Tuxedo,Tuxedo,5,,21500,10,,0,,0,127918078,7,1,16,,0,1,0,{ changebase 22; }
 7171,Skin_of_Panther,Skin of Panther,3,,141,10,,,,,,,,,,,,,{}
 7172,Claw_of_Panther,Claw of Panther,3,,145,10,,,,,,,,,,,,,{}
 7173,Bun_Buster_Bag,Bun Buster Bag,3,,10,10,,,,,,,,,,,,,{}
